[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "typhoon"
author = "Gabriel Llobera Salas"
author-email = "bielllobera@gmail.com"
home-page = "https://github.com/biellls/typhoon-orchestrator"
classifiers = [
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python',
    'Topic :: Internet',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development',
    'Typing :: Typed',
    "Development Status :: Pre Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
requires = [
    "click",
    "jinja2",
    "PyYAML",
    "boto3",
    "dataclasses",
    "jsonpickle",
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://docs-still-pending.com/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "mypy",
    "moto",
    "sqlitedict"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include"
]
dev = [
    "watchdog",
    "click"
]
all = [
    "click",
    "jinja2",
    "PyYAML",
    "boto3",
    "dataclasses",
    "jsonpickle",
    "watchdog",
    "click"
]
[tool.flit.scripts]
flit = "typhoon.cli:cli"
